--- a/KoOrderRegister/Localization/AppRes.hu-HU.resx
+++ b/KoOrderRegister/Localization/AppRes.hu-HU.resx
@@ -483,4 +483,7 @@
   <data name="Done" xml:space="preserve">
     <value>Kész</value>
   </data>
+  <data name="ClearAll" xml:space="preserve">
+    <value>Összes törlése</value>
+  </data>
 </root>
