--- a/KoOrderRegister/Localization/AppRes.de-DE.resx
+++ b/KoOrderRegister/Localization/AppRes.de-DE.resx
@@ -59,64 +59,7 @@
             : using a System.ComponentModel.TypeConverter
             : and then encoded with base64 encoding.
     -->
-  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
-    <xsd:element name="root" msdata:IsDataSet="true">
-      <xsd:complexType>
-        <xsd:choice maxOccurs="unbounded">
-          <xsd:element name="metadata">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" />
-              </xsd:sequence>
-              <xsd:attribute name="name" use="required" type="xsd:string" />
-              <xsd:attribute name="type" type="xsd:string" />
-              <xsd:attribute name="mimetype" type="xsd:string" />
-              <xsd:attribute ref="xml:space" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="assembly">
-            <xsd:complexType>
-              <xsd:attribute name="alias" type="xsd:string" />
-              <xsd:attribute name="name" type="xsd:string" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="data">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
-              </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
-              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
-              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
-              <xsd:attribute ref="xml:space" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="resheader">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-              </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" />
-            </xsd:complexType>
-          </xsd:element>
-        </xsd:choice>
-      </xsd:complexType>
-    </xsd:element>
-  </xsd:schema>
-  <resheader name="resmimetype">
-    <value>text/microsoft-resx</value>
-  </resheader>
-  <resheader name="version">
-    <value>2.0</value>
-  </resheader>
-  <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </resheader>
-  <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </resheader>
+  <root>
   <data name="OrderList" xml:space="preserve">
     <value>Bestellungen</value>
     <comment>Bestellliste</comment>
@@ -156,6 +99,10 @@
   <data name="Return" xml:space="preserve">
     <value>Zurück</value>
     <comment>Zurück</comment>
+  </data>
+  <data name="NHI" xml:space="preserve">
+    <value>Nationale Krankenversicherung</value>
+    <comment>Nationale Krankenversicherung</comment>
   </data>
   <data name="Phone" xml:space="preserve">
     <value>Telefon</value>
@@ -202,40 +149,20 @@
     <comment>Erfolgreich gespeichert</comment>
   </data>
   <data name="NHILabel" xml:space="preserve">
-    <value>Versicherungsnummer:</value>
-    <comment>Versicherungsnummer:</comment>
-  </data>
-  <data name="NoteLabel" xml:space="preserve">
-    <value>Hinweis:</value>
-    <comment>Hinweis</comment>
+    <value>Nationale Krankenversicherung:</value>
+    <comment>Nationale Krankenversicherung:</comment>
   </data>
   <data name="PhoneLabel" xml:space="preserve">
     <value>Telefon:</value>
-    <comment>Telefon</comment>
+    <comment>Telefon:</comment>
   </data>
   <data name="AddressLabel" xml:space="preserve">
     <value>Adresse:</value>
-    <comment>Adresse</comment>
-  </data>
-  <data name="NameLabel" xml:space="preserve">
-    <value>Name:</value>
-    <comment>Name</comment>
-  </data>
-  <data name="EmailLabel" xml:space="preserve">
-    <value>Email:</value>
-    <comment>Email</comment>
+    <comment>Adresse:</comment>
   </data>
   <data name="CustomerDetails" xml:space="preserve">
-    <value>Kundendaten</value>
-    <comment>Kundendaten</comment>
-  </data>
-  <data name="Copy" xml:space="preserve">
-    <value>Kopieren</value>
-    <comment>Kopieren</comment>
-  </data>
-  <data name="Copyd" xml:space="preserve">
-    <value>Kopiert</value>
-    <comment>Kopiert</comment>
+    <value>Kundendetails</value>
+    <comment>Kundendetails</comment>
   </data>
   <data name="Order" xml:space="preserve">
     <value>Bestellung</value>
@@ -243,76 +170,43 @@
   </data>
   <data name="OrderNumberLabel" xml:space="preserve">
     <value>Bestellnummer:</value>
-    <comment>Bestellnummer</comment>
+    <comment>Bestellnummer:</comment>
   </data>
   <data name="DateLabel" xml:space="preserve">
     <value>Datum:</value>
-    <comment>Datum</comment>
-  </data>
-  <data name="AddNewOrder" xml:space="preserve">
-    <value>Neue Bestellung hinzufügen</value>
-    <comment>Neue Bestellung hinzufügen</comment>
-  </data>
-  <data name="OutDateLabel" xml:space="preserve">
-    <value>Bestelldatum:</value>
-    <comment>Bestelldatum</comment>
-  </data>
-  <data name="StartDateLabel" xml:space="preserve">
-    <value>Abholdatum der Bestellung:</value>
-    <comment>Abholdatum der Bestellung</comment>
+    <comment>Datum:</comment>
   </data>
   <data name="SelectCustomer" xml:space="preserve">
-    <value>Kunde auswählen:</value>
-    <comment>Kunde auswählen</comment>
-  </data>
-  <data name="ChooseAnCustomer" xml:space="preserve">
-    <value>Wählen Sie einen Kunden</value>
-    <comment>Wählen Sie einen Kunden</comment>
-  </data>
-  <data name="ProductIdLabel" xml:space="preserve">
-    <value>Produkt-ID:</value>
-    <comment>Produkt-ID</comment>
-  </data>
-  <data name="StartDate" xml:space="preserve">
-    <value>Abholdatum der Bestellung</value>
-    <comment>Abholdatum der Bestellung</comment>
-  </data>
-  <data name="SelectFiles" xml:space="preserve">
-    <value>Dateien auswählen</value>
-    <comment>Dateien auswählen</comment>
-  </data>
-  <data name="FailedToOpen" xml:space="preserve">
-    <value>Fehler beim Öffnen: </value>
-    <comment>Fehler beim Öffnen</comment>
-  </data>
-  <data name="Open" xml:space="preserve">
-    <value>Öffnen</value>
-    <comment>Öffnen</comment>
+    <value>Kunden auswählen:</value>
+    <comment>Kunden auswählen:</comment>
   </data>
   <data name="Search" xml:space="preserve">
-    <value>Suchen</value>
-    <comment>Suchen</comment>
+    <value>Suche</value>
+    <comment>Suche</comment>
   </data>
   <data name="Settings" xml:space="preserve">
     <value>Einstellungen</value>
     <comment>Einstellungen</comment>
   </data>
-  <data name="SelectLanguage" xml:space="preserve">
-    <value>Sprache auswählen</value>
-    <comment>Sprache auswählen</comment>
+  <data name="BackupDatabase" xml:space="preserve">
+    <value>Datenbank sichern</value>
+    <comment>Datenbank sichern</comment>
   </data>
-  <data name="SelectLanguageLabel" xml:space="preserve">
-    <value>Sprache auswählen:</value>
-    <comment>Sprache auswählen:</comment>
+  <data name="RestoreDatabase" xml:space="preserve">
+    <value>Datenbank wiederherstellen</value>
+    <comment>Datenbank wiederherstellen</comment>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="RestoreDatabase" type="System.Resources.ResXNullRef, System.Windows.Forms">
-    <value />
+  <data name="PlsSelectBackupFile" xml:space="preserve">
+    <value>Bitte wählen Sie eine Sicherungsdatei zur Wiederherstellung</value>
   </data>
-  <data name="PriceLabel" xml:space="preserve">
-    <value>Ár</value>
+  <data name="DatabaseRestoredSuccessfully" xml:space="preserve">
+    <value>Datenbank erfolgreich wiederhergestellt</value>
   </data>
-  <data name="NewVersionAvailable" xml:space="preserve">
-    <value>Új verzió érhető el</value>
+  <data name="Cancel" xml:space="preserve">
+    <value>Abbrechen</value>
+    <comment>Abbrechen</comment>
+  </data>
+  <data name="Done" xml:space="preserve">
+    <value>Erledigt</value>
   </data>
 </root>
