--- a/KoOrderRegister/Localization/AppRes.fr-FR.resx
+++ b/KoOrderRegister/Localization/AppRes.fr-FR.resx
@@ -1,294 +1,199 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-	<!-- 
-		Microsoft ResX Schema
+  <!-- 
+    Microsoft ResX Schema 
+    
+    Version 2.0
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
+    associated with the data types.
+    
+    Example:
+    
+    ... ado.net/XML headers & schema ...
+    <resheader name="resmimetype">text/microsoft-resx</resheader>
+    <resheader name="version">2.0</resheader>
+    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
+    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
+    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
+        <value>[base64 mime encoded serialized .NET Framework object]</value>
+    </data>
+    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
+        <comment>This is a comment</comment>
+    </data>
+                
+    There are any number of "resheader" rows that contain simple 
+    name/value pairs.
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
+    mimetype set.
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
+    extensible. For a given mimetype the value must be set accordingly:
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
+    read any of the formats listed below.
+    
+    mimetype: application/x-microsoft.net.object.binary.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
+            : and then encoded with base64 encoding.
+    
+    mimetype: application/x-microsoft.net.object.soap.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
+            : and then encoded with base64 encoding.
 
-		Version 1.3
-
-		The primary goals of this format is to allow a simple XML format 
-		that is mostly human readable. The generation and parsing of the 
-		various data types are done through the TypeConverter classes 
-		associated with the data types.
-
-		Example:
-
-		... ado.net/XML headers & schema ...
-		<resheader name="resmimetype">text/microsoft-resx</resheader>
-		<resheader name="version">1.3</resheader>
-		<resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-		<resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
-		<data name="Name1">this is my long string</data>
-		<data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
-		<data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
-			[base64 mime encoded serialized .NET Framework object]
-		</data>
-		<data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-			[base64 mime encoded string representing a byte array form of the .NET Framework object]
-		</data>
-
-		There are any number of "resheader" rows that contain simple 
-		name/value pairs.
-
-		Each data row contains a name, and value. The row also contains a 
-		type or mimetype. Type corresponds to a .NET class that support 
-		text/value conversion through the TypeConverter architecture. 
-		Classes that don't support this are serialized and stored with the 
-		mimetype set.
-
-		The mimetype is used for serialized objects, and tells the 
-		ResXResourceReader how to depersist the object. This is currently not 
-		extensible. For a given mimetype the value must be set accordingly:
-
-		Note - application/x-microsoft.net.object.binary.base64 is the format 
-		that the ResXResourceWriter will generate, however the reader can 
-		read any of the formats listed below.
-
-		mimetype: application/x-microsoft.net.object.binary.base64
-		value   : The object must be serialized with 
-			: System.Serialization.Formatters.Binary.BinaryFormatter
-			: and then encoded with base64 encoding.
-
-		mimetype: application/x-microsoft.net.object.soap.base64
-		value   : The object must be serialized with 
-			: System.Runtime.Serialization.Formatters.Soap.SoapFormatter
-			: and then encoded with base64 encoding.
-
-		mimetype: application/x-microsoft.net.object.bytearray.base64
-		value   : The object must be serialized into a byte array 
-			: using a System.ComponentModel.TypeConverter
-			: and then encoded with base64 encoding.
-	-->
-	
-	<xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-		<xsd:element name="root" msdata:IsDataSet="true">
-			<xsd:complexType>
-				<xsd:choice maxOccurs="unbounded">
-					<xsd:element name="data">
-						<xsd:complexType>
-							<xsd:sequence>
-								<xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-								<xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
-							</xsd:sequence>
-							<xsd:attribute name="name" type="xsd:string" msdata:Ordinal="1" />
-							<xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
-							<xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
-						</xsd:complexType>
-					</xsd:element>
-					<xsd:element name="resheader">
-						<xsd:complexType>
-							<xsd:sequence>
-								<xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-							</xsd:sequence>
-							<xsd:attribute name="name" type="xsd:string" use="required" />
-						</xsd:complexType>
-					</xsd:element>
-				</xsd:choice>
-			</xsd:complexType>
-		</xsd:element>
-	</xsd:schema>
-	<resheader name="resmimetype">
-		<value>text/microsoft-resx</value>
-	</resheader>
-	<resheader name="version">
-		<value>1.3</value>
-	</resheader>
-	<resheader name="reader">
-		<value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-	</resheader>
-	<resheader name="writer">
-		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-	</resheader>
-	<data name="OrderList" xml:space="preserve">
+    mimetype: application/x-microsoft.net.object.bytearray.base64
+    value   : The object must be serialized into a byte array 
+            : using a System.ComponentModel.TypeConverter
+            : and then encoded with base64 encoding.
+    -->
+ <root>
+  <data name="OrderList" xml:space="preserve">
     <value>Commandes</value>
-    <comment>Liste de commandes</comment>
+    <comment>Liste des commandes</comment>
   </data>
-	<data name="Orders" xml:space="preserve">
+  <data name="Orders" xml:space="preserve">
     <value>Commandes</value>
     <comment>Commandes</comment>
   </data>
-	<data name="OrderNumber" xml:space="preserve">
+  <data name="OrderNumber" xml:space="preserve">
     <value>Numéro de commande</value>
     <comment>Numéro de commande</comment>
   </data>
-	<data name="Name" xml:space="preserve">
+  <data name="Name" xml:space="preserve">
     <value>Nom</value>
     <comment>Nom</comment>
   </data>
-	<data name="Date" xml:space="preserve">
+  <data name="Date" xml:space="preserve">
     <value>Date</value>
     <comment>Date</comment>
   </data>
-	<data name="CustomerList" xml:space="preserve">
+  <data name="CustomerList" xml:space="preserve">
     <value>Clients</value>
-    <comment>Liste de clients</comment>
+    <comment>Liste des clients</comment>
   </data>
-	<data name="Update" xml:space="preserve">
+  <data name="Update" xml:space="preserve">
     <value>Mettre à jour</value>
     <comment>Mettre à jour</comment>
   </data>
-	<data name="AddNewCustomer" xml:space="preserve">
+  <data name="AddNewCustomer" xml:space="preserve">
     <value>Ajouter un nouveau client</value>
     <comment>Ajouter un nouveau client</comment>
   </data>
-	<data name="Person" xml:space="preserve">
+  <data name="Person" xml:space="preserve">
     <value>Personne</value>
     <comment>Personne</comment>
   </data>
-	<data name="Return" xml:space="preserve">
+  <data name="Return" xml:space="preserve">
     <value>Retour</value>
     <comment>Retour</comment>
   </data>
-	<data name="NHI" xml:space="preserve">
-    <value>Numéro de Sécurité Sociale</value>
-    <comment>Numéro de Sécurité Sociale</comment>
+  <data name="NHI" xml:space="preserve">
+    <value>Assurance maladie nationale</value>
+    <comment>Assurance maladie nationale</comment>
   </data>
-	<data name="Phone" xml:space="preserve">
+  <data name="Phone" xml:space="preserve">
     <value>Téléphone</value>
     <comment>Téléphone</comment>
   </data>
-	<data name="Edit" xml:space="preserve">
+  <data name="Edit" xml:space="preserve">
     <value>Modifier</value>
     <comment>Modifier</comment>
   </data>
-	<data name="Delete" xml:space="preserve">
+  <data name="Delete" xml:space="preserve">
     <value>Supprimer</value>
     <comment>Supprimer</comment>
   </data>
-	<data name="AreYouSureYouWantToDelete" xml:space="preserve">
+  <data name="AreYouSureYouWantToDelete" xml:space="preserve">
     <value>Êtes-vous sûr de vouloir supprimer : </value>
     <comment>Êtes-vous sûr de vouloir supprimer : </comment>
   </data>
-	<data name="Yes" xml:space="preserve">
+  <data name="Yes" xml:space="preserve">
     <value>Oui</value>
     <comment>Oui</comment>
   </data>
-	<data name="No" xml:space="preserve">
+  <data name="No" xml:space="preserve">
     <value>Non</value>
     <comment>Non</comment>
   </data>
-	<data name="Ok" xml:space="preserve">
+  <data name="Ok" xml:space="preserve">
     <value>Ok</value>
     <comment>Ok</comment>
   </data>
-	<data name="FailedToDelete" xml:space="preserve">
+  <data name="FailedToDelete" xml:space="preserve">
     <value>Échec de la suppression.</value>
     <comment>Échec de la suppression.</comment>
   </data>
-	<data name="Save" xml:space="preserve">
+  <data name="Save" xml:space="preserve">
     <value>Enregistrer</value>
     <comment>Enregistrer</comment>
   </data>
-	<data name="FailedToSave" xml:space="preserve">
+  <data name="FailedToSave" xml:space="preserve">
     <value>Échec de l'enregistrement !</value>
     <comment>Échec de l'enregistrement !</comment>
   </data>
-	<data name="SuccessToSave" xml:space="preserve">
+  <data name="SuccessToSave" xml:space="preserve">
     <value>Enregistrement réussi</value>
     <comment>Enregistrement réussi</comment>
   </data>
-	<data name="NHILabel" xml:space="preserve">
-    <value>Numéro de Sécurité Sociale :</value>
-    <comment>NSS :</comment>
+  <data name="NHILabel" xml:space="preserve">
+    <value>Assurance maladie nationale :</value>
+    <comment>Assurance maladie nationale :</comment>
   </data>
-	<data name="NoteLabel" xml:space="preserve">
-    <value>Remarque :</value>
-    <comment>Remarque</comment>
-  </data>
-	<data name="PhoneLabel" xml:space="preserve">
+  <data name="PhoneLabel" xml:space="preserve">
     <value>Téléphone :</value>
-    <comment>Téléphone</comment>
+    <comment>Téléphone :</comment>
   </data>
-	<data name="AddressLabel" xml:space="preserve">
+  <data name="AddressLabel" xml:space="preserve">
     <value>Adresse :</value>
-    <comment>Adresse</comment>
+    <comment>Adresse :</comment>
   </data>
-	<data name="NameLabel" xml:space="preserve">
-    <value>Nom :</value>
-    <comment>Nom</comment>
-  </data>
-	<data name="EmailLabel" xml:space="preserve">
-    <value>Email :</value>
-    <comment>Email</comment>
-  </data>
-	<data name="CustomerDetails" xml:space="preserve">
+  <data name="CustomerDetails" xml:space="preserve">
     <value>Détails du client</value>
     <comment>Détails du client</comment>
   </data>
-	<data name="Copy" xml:space="preserve">
-    <value>Copier</value>
-    <comment>Copier</comment>
-  </data>
-	<data name="Copyd" xml:space="preserve">
-    <value>Copié</value>
-    <comment>Copié</comment>
-  </data>
-	<data name="Order" xml:space="preserve">
+  <data name="Order" xml:space="preserve">
     <value>Commande</value>
     <comment>Commande</comment>
   </data>
-	<data name="OrderNumberLabel" xml:space="preserve">
+  <data name="OrderNumberLabel" xml:space="preserve">
     <value>Numéro de commande :</value>
-    <comment>Numéro de commande</comment>
+    <comment>Numéro de commande :</comment>
   </data>
-	<data name="DateLabel" xml:space="preserve">
+  <data name="DateLabel" xml:space="preserve">
     <value>Date :</value>
-    <comment>Date</comment>
+    <comment>Date :</comment>
   </data>
-	<data name="AddNewOrder" xml:space="preserve">
-    <value>Ajouter une nouvelle commande</value>
-    <comment>Ajouter une nouvelle commande</comment>
-  </data>
-	<data name="OutDateLabel" xml:space="preserve">
-    <value>Date d'émission de la commande :</value>
-    <comment>Date d'émission de la commande</comment>
-  </data>
-	<data name="StartDateLabel" xml:space="preserve">
-    <value>Date de retrait de la commande :</value>
-    <comment>Date de retrait de la commande</comment>
-  </data>
-	<data name="SelectCustomer" xml:space="preserve">
+  <data name="SelectCustomer" xml:space="preserve">
     <value>Sélectionner un client :</value>
-    <comment>Sélectionner un client</comment>
+    <comment>Sélectionner un client :</comment>
   </data>
-	<data name="ChooseAnCustomer" xml:space="preserve">
-    <value>Choisissez un client</value>
-    <comment>Choisissez un client</comment>
+  <data name="Search" xml:space="preserve">
+    <value>Recherche</value>
+    <comment>Recherche</comment>
   </data>
-	<data name="ProductIdLabel" xml:space="preserve">
-    <value>Identifiant du produit :</value>
-    <comment>Identifiant du produit</comment>
-  </data>
-	<data name="StartDate" xml:space="preserve">
-    <value>Date de retrait de la commande</value>
-    <comment>Date de retrait de la commande</comment>
-  </data>
-	<data name="SelectFiles" xml:space="preserve">
-    <value>Sélectionner les fichiers</value>
-    <comment>Sélectionner les fichiers</comment>
-  </data>
-	<data name="FailedToOpen" xml:space="preserve">
-    <value>Échec de l'ouverture : </value>
-    <comment>Échec de l'ouverture</comment>
-  </data>
-	<data name="Open" xml:space="preserve">
-    <value>Ouvrir</value>
-    <comment>Ouvrir</comment>
-  </data>
-	<data name="Search" xml:space="preserve">
-    <value>Rechercher</value>
-    <comment>Rechercher</comment>
-  </data>
-	<data name="Settings" xml:space="preserve">
+  <data name="Settings" xml:space="preserve">
     <value>Paramètres</value>
     <comment>Paramètres</comment>
   </data>
-	<data name="SelectLanguage" xml:space="preserve">
-    <value>Sélectionner une langue</value>
-    <comment>Sélectionner une langue</comment>
+  <data name="BackupDatabase" xml:space="preserve">
+    <value>Sauvegarder la base de données</value>
+    <comment>Sauvegarder la base de données</comment>
   </data>
-	<data name="SelectLanguageLabel" xml:space="preserve">
-    <value>Sélectionner une langue:</value>
-    <comment>Sélectionner une langue :</comment>
+  <data name="RestoreDatabase" xml:space="preserve">
+    <value>Restaurer la base de données</value>
+    <comment>Restaurer la base de données</comment>
   </data>
-
 </root>
